src/objects/BMCServiceDesk__BMC_LANEndpoint__c.object
<CustomObject>
    <description>BMC_LANEndpoint: CMDB Class that stores information about communication endpoints that, when their related interface device is connected to a LAN, can send and receive dataframes. LAN endpoints include MAC addresses, and Ethernet, token ring, and FDDI interfaces.  The BMC_InSegment class is used to relate instances of the BMC_ConnectivitySegment class to instances of BMC_LANEndpoint. To represent individual Large Area Networks (LNs), use the BMC_LANEndpoint class. To relate individual LNs to an instance of BMC_LNsCollection, use the BMC_LNsInCollection class.  This class corresponds to the DMTF class CIM_LANEndpoint.</description>
    <fields>
        <fullName>BMCServiceDesk__AliasAddresses__c</fullName>
        <label>Alias Addresses</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__GroupAddresses__c</fullName>
        <label>Group Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LANID__c</fullName>
        <label>LAN ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MACAddress__c</fullName>
        <label>MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LAN Endpoint</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BMC_LANEndpoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAN Endpoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>